--- a/contact.html
+++ b/contact.html
@@ -47,6 +47,25 @@
         </form>
     </div>
    </section>
+   <section id="contact-info" class="bg-dark">
+<div class="container">
+    <div class="box">
+        <i class="fas fa-hotel fa-3x"></i>
+            <h3>Location</h3>
+            <p>50 Main street, Uzbekistan</p>
+        </div>
+        <div class="box">
+            <i class="fas fa-phone fa-3x"></i>
+            <h3>Phone Number</h3>
+            <p> (990)555-00-00</p>
+        </div>
+        <div class="box">
+            <i class="fas fa-envelope fa-3x"></i>
+            <h3>Email Address</h3>
+            <p>zoda_hotel@zoda.com</p>
+        </div>
+</div>
+   </section>
     <footer id="main-footer">
 <p>Hotel Zoda &copy; 2024, All Rights Reserved</p>
     </footer>
