--- a/contact.html
+++ b/contact.html
@@ -6,6 +6,7 @@
     <meta name="description" content="Welcome to the most extraordinary hotel in Yangiyer Syrdarya">
     <meta name="keywords" content="hotel, Yangiyer Syrdarya, Yangiyer hotel, Uzbekistan">
     <link rel="stylesheet" 
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css" integrity="sha512-SnH5WK+bZxgPHs44uWIX+LLJAJ9/2PkPKZ5QiAj6Ta86w+fsb2TkcmfRyVX3pBnMFcV7oQPJkl9QevSCWr3W6A==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     href="https://use.fontawesome.com/releases/v5.6.1/css/all.css" 
     integrity="sha384-gfdkjb5BdAXd+lj+gudLW5IT+brZEZsLm+aCMlF1V92rMkPaX4PP"
      crossorigin="anonymous">
@@ -29,7 +30,7 @@
    <section id="contact-form" class="py-3">
     <div class="container">
         <h1 class="l-heading"><span class="text-primary">Contact</span> Us</h1>
-        <p>please fill out the form below to contact us</p>
+        <p>Please fill out the form below to contact us</p>
         <form action="process.php">
             <div class="form-group">
                 <label for="name">Name</label>
