--- a/index.html
+++ b/index.html
@@ -5,10 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Welcome to the most extraordinary hotel in Yangiyer Syrdarya">
     <meta name="keywords" content="hotel, Yangiyer Syrdarya, Yangiyer hotel, Uzbekistan">
-    <link rel="stylesheet" 
-    href="https://use.fontawesome.com/releases/v5.6.1/css/all.css" 
-    integrity="sha384-gfdkjb5BdAXd+lj+gudLW5IT+brZEZsLm+aCMlF1V92rMkPaX4PP"
-     crossorigin="anonymous">
+    
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css" integrity="sha512-SnH5WK+bZxgPHs44uWIX+LLJAJ9/2PkPKZ5QiAj6Ta86w+fsb2TkcmfRyVX3pBnMFcV7oQPJkl9QevSCWr3W6A==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    
     <link rel="stylesheet" href="css/style.css">
     <title>Hotel Zoda / Welcome</title>
 </head>
